# cristal

./: .env.example  .gitignore  Arquitetura.md  CLAUDE.md  CRISTAL_2_0_V3.md  Containerfile  ESTRATEGIA_CRAWLING_BASE_CONHECIMENTO.md  NOVO_RAG.md  NOVO_RAG_INSTRUCOES.md  PLANO_IMPLEMENTACAO_ASSISTENTE_TRANSPARENCIA_TREPI.md  PLANO_MELHORIA_RAG_V2.md  PLANO_PIPELINE.md  PLANO_PIPELINE_V2.md  PROMPT_CLAUDE_CODE_MIGRACAO_KNOWLEDGE_DB.md  Perguntas.md  README.md  SOLUCAO_MULTI_AGENTES.md  SUGESTAO_MELHORIA.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  main.py
app/config/: settings.py
app/data/: knowledge.md
app/models/: schemas.py
app/prompts/: system_prompt.py
app/routers/: chat.py
app/services/: chat_engine.py  content_fetcher.py  knowledge_base.py  vertex_client.py
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_schema.py  002_document_processing_and_inconsistencies.py  003_unaccent_fts.py  004_embeddings.py  005_page_chunks.py  006_synthetic_queries.py  007_fix_embeddings_source_type.py  008_content_summaries.py  009_enriched_metadata.py  010_semantic_chunks.py  011_chunk_quality.py  012_document_relations.py
openshift/: configmap.yaml  cronjob-crawler.yaml  cronjob-healthcheck.yaml  cronjob-ingester.yaml  deployment.yaml  route.yaml  secret.yaml  service.yaml
scripts/: backfill_embeddings.py  backfill_page_chunks.py  cleanup_corrupt_tables.sql  crawler.py  docker-entrypoint.sh  migrate_sqlite_to_postgres.py  normalize_data.py  requirements.txt  run_pipeline.sh  setup_venv.sh  start.sh
static/: index.html
static/css/: analytics.css  animations.css  components.css  style.css
static/js/: analytics.js  api.js  app.js  chat.js  documents.js  map.js  sessions.js  utils.js
tests/: conftest.py
tests/e2e/: conftest.py  test_chat_with_documents.py  test_document_pipeline.py  test_health_check.py  test_inconsistency_admin.py  test_multi_agent_e2e.py
tests/integration/: conftest.py  test_analytics_api.py  test_bootstrap.py  test_chat_api.py  test_crawler.py  test_document_api.py  test_document_repo_atomic.py  test_document_repo_status.py  test_inconsistency_repo.py  test_migration_002.py  test_migration_003.py  test_migrations.py  test_normalize_data.py  test_pg_connection.py  (+5 more)
(+146 files in other folders)
