[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cristal"
version = "2.0.0"
description = "Transparência Chat — Assistente de IA para o portal de transparência do TRE-PI"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ─── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
# Arquivos legados (v1) serão substituídos em etapas posteriores
exclude = [
    "app/config.py",
    "app/main.py",
    "app/models",
    "app/prompts",
    "app/routers",
    "app/services",
    "scripts",
    "venv",
    "venv2",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations
]
ignore = [
    "S101",   # use of assert (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "N"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ─── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# Módulos legados (v1) excluídos até serem substituídos nas etapas seguintes
exclude = [
    "migrations/",
    "scripts/",
    "tests/",
    "app/config\\.py",
    "app/main\\.py",
    "app/models/",
    "app/prompts/",
    "app/routers/",
    "app/services/",
]

[[tool.mypy.overrides]]
module = ["app.adapters.*"]
disallow_untyped_defs = true

# ─── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: testes de integração que requerem Docker/banco real",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/adapters/*", "app/main.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
